# fastapi-domain-monitor

./: .gitignore  AGENTS.md  README.md  RELEASE.md  pyproject.toml
Formula/: fastapi-domain-monitor.rb
frontend/: README.md  components.json  eslint.config.mjs  index.html  next.config.ts  package.json  tsconfig.json  vite.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: diagram-canvas.tsx  domain-monitor-dashboard.tsx  theme-mode-control.tsx
frontend/components/ui/: animated-theme-toggler.tsx  file-tree.tsx  sidebar.tsx
frontend/lib/: monitor.ts
frontend/src/: App.tsx  main.tsx
scripts/: sync-frontend.mjs
src/fastapi_domain_monitor/: __init__.py  cli.py  mermaid.py  models.py  parser.py  plugin.py  watcher.py
src/fastapi_domain_monitor/static/: index.html
src/fastapi_domain_monitor/static/dashboard/: __next.__PAGE__.txt  __next._head.txt  __next._index.txt  __next._tree.txt  index.html  index.txt
src/fastapi_domain_monitor/static/dashboard/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt  index.html
src/fastapi_domain_monitor/static/dashboard/assets/: _basePickBy-BKje2w_0.js  _basePickBy-BOlYiIq1.js  _basePickBy-DFOgBiCg.js  _basePickBy-DPvSo11b.js  _basePickBy-JucxV5VO.js  _basePickBy-Q6HFB0WK.js  _basePickBy-dIxShpPp.js  _basePickBy-r8B04Lo0.js  _basePickBy-xMh4zmom.js  _baseUniq-2HWTzrkK.js  _baseUniq-BxEZsWtf.js  _baseUniq-C0DhcF-w.js  _baseUniq-C5hTFivd.js  _baseUniq-Ceeh2EGx.js  _baseUniq-Ch6R69rf.js  _baseUniq-Daiqi5Gr.js  _baseUniq-DnNBVMGv.js  _baseUniq-dG5rF2lc.js  arc-B9uurn1M.js  arc-BPUUtPch.js  arc-Bx7opb6P.js  arc-C8fKhgCf.js  arc-CHlNKH2e.js  arc-CX7cqype.js  arc-DF-kjjaN.js  arc-DYlyuDNQ.js  arc-DzfP2T7T.js  architectureDiagram-VXUJARFQ-BSyBbz9H.js  architectureDiagram-VXUJARFQ-C4eH9W2E.js  architectureDiagram-VXUJARFQ-C64yEsdc.js  architectureDiagram-VXUJARFQ-CrZ4VdPa.js  architectureDiagram-VXUJARFQ-WxZSiuW6.js  architectureDiagram-VXUJARFQ-XA9jBJce.js  architectureDiagram-VXUJARFQ-hehvFG3J.js  architectureDiagram-VXUJARFQ-qDn4qjhC.js  (+377 more)
tests/: test_mermaid.py  test_parser.py  test_plugin.py  test_watcher.py
tests/fixtures/: sample_models.py  sample_models_qualified.py
(+13 files in other folders)
