[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-domain-monitor"
version = "0.1.0"
description = "FastAPI plugin for real-time SQLModel domain diagram visualization"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "watchdog>=4.0.0",
    "uvicorn[standard]>=0.20.0",
    "click>=8.0.0",
]

[project.scripts]
domain-monitor = "fastapi_domain_monitor.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_domain_monitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
